// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules/manager/npm/post-update/lerna generateLockFiles() allows scripts for trust level high 1`] = `
[
  {
    "cmd": "lerna info || echo "Ignoring lerna info failure"",
    "options": {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  {
    "cmd": "npm install  --no-audit --package-lock-only",
    "options": {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  {
    "cmd": "lerna bootstrap --no-ci --  --no-audit --package-lock-only",
    "options": {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`modules/manager/npm/post-update/lerna generateLockFiles() defaults to latest if lerna version unspecified 1`] = `
[
  {
    "cmd": "lerna info || echo "Ignoring lerna info failure"",
    "options": {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  {
    "cmd": "npm install --ignore-scripts  --no-audit --package-lock-only",
    "options": {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  {
    "cmd": "lerna bootstrap --no-ci --ignore-scripts -- --ignore-scripts  --no-audit --package-lock-only",
    "options": {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`modules/manager/npm/post-update/lerna generateLockFiles() generates package-lock.json files 1`] = `
[
  {
    "cmd": "lerna info || echo "Ignoring lerna info failure"",
    "options": {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  {
    "cmd": "npm install --ignore-scripts  --no-audit --package-lock-only",
    "options": {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  {
    "cmd": "lerna bootstrap --no-ci --ignore-scripts -- --ignore-scripts  --no-audit --package-lock-only",
    "options": {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`modules/manager/npm/post-update/lerna generateLockFiles() generates yarn.lock files 1`] = `
[
  {
    "cmd": "lerna info || echo "Ignoring lerna info failure"",
    "options": {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  {
    "cmd": "yarn install --ignore-scripts --ignore-engines --ignore-platform",
    "options": {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  {
    "cmd": "lerna bootstrap --no-ci --ignore-scripts -- --ignore-scripts --ignore-engines --ignore-platform",
    "options": {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`modules/manager/npm/post-update/lerna generateLockFiles() performs full npm install 1`] = `
[
  {
    "cmd": "lerna info || echo "Ignoring lerna info failure"",
    "options": {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  {
    "cmd": "npm install --ignore-scripts  --no-audit",
    "options": {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  {
    "cmd": "lerna bootstrap --no-ci --ignore-scripts -- --ignore-scripts  --no-audit",
    "options": {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;
